# Trajectory-Visibility-at-First-Sight

./: CMakeLists.txt  README.md
src/: first_sight.cpp  first_sight.h  geometry.cpp  geometry.h  linear_shortest_path.cpp  linear_shortest_path.h  math_solver.cpp  math_solver.h  splinegon.cpp  splinegon.h
tests/: test_main.cpp
